Changed id of xml content for future DB usage.

--- a/app/src/main/res/layout/activity_q21_to_q30_screen.xml
+++ b/app/src/main/res/layout/activity_q21_to_q30_screen.xml
@@ -119,6 +119,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"/>
             </TableRow>
+
+            <!-- Question 21 -->
             <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -140,18 +142,17 @@
                         android:layout_column="2"
                         android:layout_weight="2"
                         android:textSize="18sp" android:maxWidth="300dp"/>
-
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton1.1"
+                        android:id="@+id/none21"
                         android:layout_column="3"
                         android:textAlignment="center"
                         android:layout_weight="1" android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton1.2"
+                        android:id="@+id/mild21"
                         android:layout_column="4"
                         android:layout_weight="1"
                         android:textAlignment="center"
@@ -159,7 +160,7 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton1.3"
+                        android:id="@+id/moderate21"
                         android:layout_column="5"
                         android:layout_weight="1"
                         android:textAlignment="center"
@@ -167,7 +168,7 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton1.4"
+                        android:id="@+id/severe21"
                         android:layout_column="6"
                         android:layout_weight="1"
                         android:textAlignment="center"
@@ -175,14 +176,15 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton1.5"
+                        android:id="@+id/not_known21"
                         android:layout_column="7"
                         android:layout_weight="1"
-                        android:layout_marginRight="5dp" android:layout_gravity="center_horizontal"
-                        android:width="25dp"/>
+                        android:layout_marginRight="5dp"
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
 
             </TableRow>
 
+            <!-- Question 22 -->
             <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -202,45 +204,45 @@
                         android:layout_column="2"
                         android:textSize="18sp"
                         android:layout_weight="2" android:maxWidth="300dp"/>
-
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton2.1"
+                        android:id="@+id/none22"
                         android:layout_column="3"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton2.2"
+                        android:id="@+id/mild22"
                         android:layout_column="4"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton2.3"
+                        android:id="@+id/moderate22"
                         android:layout_column="5"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton2.4"
+                        android:id="@+id/severe22"
                         android:layout_column="6"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton2.5"
+                        android:id="@+id/not_known22"
                         android:layout_column="7"
                         android:layout_weight="1"
-                        android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
-                        android:width="25dp"/>
+                        android:layout_marginEnd="5dp"
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
             </TableRow>
 
+            <!-- Question 23 -->
             <TableRow
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent">
@@ -261,51 +263,43 @@
                         android:layout_column="2"
                         android:textSize="18sp"
                         android:layout_weight="2" android:maxWidth="300dp"/>
-
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton3.1"
+                        android:id="@+id/none23"
                         android:layout_column="3"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
-
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton3.2"
+                        android:id="@+id/mild23"
                         android:layout_column="4"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
-
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton3.3"
+                        android:id="@+id/moderate23"
                         android:layout_column="5"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
-
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton3.4"
+                        android:id="@+id/severe23"
                         android:layout_column="6"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
-
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton3.5"
+                        android:id="@+id/not_known23"
                         android:layout_column="7"
                         android:layout_weight="1"
-                        android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
-                        android:width="25dp"/>
-
+                        android:layout_marginEnd="5dp"
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
             </TableRow>
-
-
         </TableLayout>
     </ScrollView>
 </RelativeLayout>
