--- a/app/src/main/res/layout/activity_q1_to_q10_screen.xml
+++ b/app/src/main/res/layout/activity_q1_to_q10_screen.xml
@@ -31,7 +31,7 @@
         <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/table_layout">
+                android:id="@+id/table_q1_q10">
 
             <TableRow
                     android:layout_width="match_parent"
@@ -144,14 +144,14 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton1.1"
+                        android:id="@+id/none1"
                         android:layout_column="3"
                         android:textAlignment="center"
                         android:layout_weight="1" android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton1.2"
+                        android:id="@+id/mild1"
                         android:layout_column="4"
                         android:layout_weight="1"
                         android:textAlignment="center"
@@ -159,7 +159,7 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton1.3"
+                        android:id="@+id/moderate1"
                         android:layout_column="5"
                         android:layout_weight="1"
                         android:textAlignment="center"
@@ -167,7 +167,7 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton1.4"
+                        android:id="@+id/severe1"
                         android:layout_column="6"
                         android:layout_weight="1"
                         android:textAlignment="center"
@@ -175,7 +175,7 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton1.5"
+                        android:id="@+id/not_known1"
                         android:layout_column="7"
                         android:layout_weight="1"
                         android:layout_marginRight="5dp" android:layout_gravity="center_horizontal"
@@ -206,35 +206,35 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton2.1"
+                        android:id="@+id/none2"
                         android:layout_column="3"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton2.2"
+                        android:id="@+id/mild2"
                         android:layout_column="4"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton2.3"
+                        android:id="@+id/moderate2"
                         android:layout_column="5"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton2.4"
+                        android:id="@+id/severe2"
                         android:layout_column="6"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton2.5"
+                        android:id="@+id/not_known2"
                         android:layout_column="7"
                         android:layout_weight="1"
                         android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
@@ -265,7 +265,7 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton3.1"
+                        android:id="@+id/none3"
                         android:layout_column="3"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
@@ -273,7 +273,7 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton3.2"
+                        android:id="@+id/mild3"
                         android:layout_column="4"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
@@ -281,7 +281,7 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton3.3"
+                        android:id="@+id/moderate3"
                         android:layout_column="5"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
@@ -289,7 +289,7 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton3.4"
+                        android:id="@+id/severe3"
                         android:layout_column="6"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal" android:width="25dp"/>
@@ -297,7 +297,7 @@
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton3.5"
+                        android:id="@+id/not_known3"
                         android:layout_column="7"
                         android:layout_weight="1"
                         android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
